Added placeholders for form elements.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     </head>
     <body>
       <title> Continuous Improvement Work Form</title>
-        
+        <!-- Form -->
+         <!-- Date -->
+          <!-- Name -->
+           <!-- Type of Idea: short term, medium term, long term -->
+            <!-- Explanation of Idea -->
+             <!-- Submit Button, Which Will Send Idea and Also Create a Ticket Number -->
         <script src="script.js" async defer></script>
     </body>
+</html>
